--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.12.0",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.11.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.1",
     "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
